# arabic-morphology-tool

./: README.md  pyproject.toml
src/arabic_morphology/: __main__.py  cli.py  core.py  exporter.py  morphology.py
