[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-morphology"
version = "0.1.0"
description = "Arabic morphology tool"
requires-python = ">=3.8"

dependencies = [
    "python-dotenv",
    "pydantic",
    "openai",
    "xlsxwriter",
    "typer"

]

[project.scripts]
arabic-morphology = "arabic_morphology.__main__:main"
